libs/@local/hashql/ast/tests/ui/lower/expander/special-form-expander/type-4.jsonc
//@ run: fail
//@ description: type/4 should error out
[
  "::kernel::special_form::type",
  "x",
  "Boolean",
  ["+", "x", "x"],
  { "#literal": true }
  //~^ ERROR Remove this argument
]
